# rolloc

./: .gitignore  AGENTS.md  PLAN.md  README.md  package.json  sample_exif.txt  test-all-tags.ts  test-exif.ts  test-fuji-decoder.ts  test-fuji-tags.ts  test-node-exif.ts  test-pick-tags.ts  tsconfig.json  verify-film-sims.ts  vite.config.ts
.github/workflows/: release.yml
scripts/: build-dmg.sh  tag.sh
src/: app.d.ts
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: decode.rs  demosaic.rs  export.rs  lib.rs  process.rs  raw.rs  thumb.rs
src-tauri/tests/: tiff_decode.rs
src/lib/: jobs.svelte.ts  theme.svelte.ts  types.ts  updater.svelte.ts
src/lib/components/: AnalogClock.svelte  BackgroundJobsDock.svelte  BlackWhiteFilmButton.svelte  ColorFilmButton.svelte  CropOverlay.svelte  CurvesEditor.svelte  ExifPanel.svelte  ExportControls.svelte  ExposureCompensationScale.svelte  FilmStockInput.svelte  FrameMetaPanel.svelte  FrameThumb.svelte  HorizonOverlay.svelte  InversionControls.svelte  JointSlider.svelte  KeyboardHintBar.svelte  LabeledRange.svelte  LibraryImageThumb.svelte  LibraryThumbStrip.svelte  MiniCalendar.svelte  NewLibraryDialog.svelte  NewRollDialog.svelte  RgbHistogram.svelte  RollExportBar.svelte  RollThumbStrip.svelte  SidebarSection.svelte  SlideFilmButton.svelte  ThemeSwitcher.svelte  ToggleButton.svelte  TransformControls.svelte  VirtualGrid.svelte  WhiteBalanceControls.svelte  WhiteBalanceGrid.svelte  exif-types.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
(+39 files in other folders)
