[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# Thumbnail generation: decode + resize entirely in Rust.
# Only JPEG and TIFF codecs are enabled to keep compile time small.
image = { version = "0.25", default-features = false, features = ["jpeg", "tiff"] }
rayon = "1.10"
# tokio is a transitive dep of tauri; we declare it explicitly to use
# spawn_blocking for off-thread CPU work in async commands.
tokio = { version = "1", features = ["rt"] }

# Compile image-processing crates at full optimisation even in debug builds.
# This brings dev-mode thumbnail performance to parity with release without
# slowing incremental recompilation of app code (which stays at opt-level = 0).
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.zune-jpeg]
opt-level = 3
[profile.dev.package.tiff]
opt-level = 3
